# crew

./: .dockerignore  .env.example  .gitignore  .pm_remote_history  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  entry.py  install.sh  pyproject.toml
.github/workflows/: release.yml
docker/postgres/: init-databases.sql
docs/: agent-trace-signals-integration.md  architecture.md  beta-architecture.md  data.md  growth-expert-pitch.html  pm.md  product.md  workflow-publishing-design.md  workflow-runner-redesign.md  workspace-proposal.md
src/crew/: __init__.py  app.py  host.py
src/crew/agents/: __init__.py
src/crew/artifacts/: AGENTS.md  __init__.py  tools.py
src/crew/beta/: __init__.py  app.py  auth.py  host_client.py  store.py  visualizations.py
src/crew/cli/: __init__.py  auth_store.py  beta_client.py  hosts_store.py  main.py  workspace_commands.py
src/crew/code_index/: __init__.py  repomap.sh  service.py
src/crew/experimentation/: AGENTS.md  __init__.py  tools.py
src/crew/metrics_layer/: AGENTS.md
src/crew/shared/: __init__.py  config.py  runtime_context.py  runtime_paths.py  skills.py  version.py  workspace_context.py  workspaces.py
src/crew/skill/: __init__.py  service.py
src/crew/skill_library/: __init__.py  repo.py
src/crew/workflow/: service.py  tools.py
tests/: conftest.py  memory_fakes.py  test_api.py  test_app.py  test_artifacts.py  test_beta_api.py  test_beta_architecture.py  test_beta_store.py  test_beta_visualizations.py  test_code_index.py  test_crew_cli.py  test_data_prompt.py  test_engineer_prompt.py  test_experimentation.py  test_hosts.py  test_memory_store.py  test_pm_prompt.py  test_runtime_paths.py  test_workflow.py
tests/data/: test_local_tools.py
web/: .env.local  Dockerfile  components.json  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  postcss.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  trace
web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
web/.next/server/: middleware-react-loadable-manifest.js  (+4 more)
(+548 files in other folders)
