[project]
name = "mash-crew"
version = "0.1.0"
description = "Virtual crew of role-based agents built on top of mash."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "imsid" }]
dependencies = [
  "mashpy>=0.2.8",
  "python-dotenv>=1.0",
  "google-auth>=2",
  "psycopg[binary]>=3.2.0",
  "PyYAML>=6.0",
  "scipy>=1.13",
  "statsmodels>=0.14",
]

[project.scripts]
crew = "crew.cli.main:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=6.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["crew*"]

[tool.setuptools.package-data]
crew = [
  "skills/*/SKILL.md",
  "agents/*/skills/*/SKILL.md",
  "agents/*/skills/*/references/*.md",
  "artifacts/schema/*.md",
  "metrics_layer/schema/*.yml",
  "experimentation/schema/*.yml",
  "code_index/*.sh",
  "workspace/*/artifacts/*.md",
  "workspace/*/metrics_layer/configs/sources/*.yml",
  "workspace/*/metrics_layer/configs/metrics/*.yml",
  "workspace/*/experimentation/configs/experiments/*.yml",
]

[tool.pylint."messages control"]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "broad-exception-caught"
]
